# Make

./: CMakeLists.txt
single/: flowcontrol.cmake  function.cmake  output.cmake
src/: CMakeLists.txt  main.cpp
src/animal/: CMakeLists.txt  animal.cmake  dog.cpp  dog.h
